# stock_picker_backend

./: .gitignore  README.md  pyproject.toml  test_dataclass_demo.py
src/stock_picker/app/: __main__.py  main.py  worker.py
src/stock_picker/app/api/: router.py
src/stock_picker/app/api/routes/: etf.py  health.py
src/stock_picker/app/core/: config.py  logging.py
src/stock_picker/app/db/: __init__.py  database.py
src/stock_picker/app/dependencies/: __init__.py
src/stock_picker/app/services/: __init__.py  etf_service.py  health_service.py
