[project]
name = "stock-picker"
version = "0.1.0"
description = ""
authors = [
    {name = "orange0214",email = "junchenhe123@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.112",
    "uvicorn[standard]>=0.30",
    "pydantic-settings>=2.4",
]

[tool.poetry]
packages = [{include = "stock_picker", from = "src"}]

[tool.poetry.scripts]
dev = "stock_picker.app.__main__:main"



[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
